--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - "9000:9000"
     depends_on:
-      - postgres
+      - postgres:
+          condition: service_healthy
     environment:
       LISTMONK_app__address: 0.0.0.0:9000
       LISTMONK_app__admin_username: admin
@@ -27,6 +28,11 @@ services:
       - pg-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   mailhog:
     image: mailhog/mailhog:latest
