--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - "9000:9000"
     depends_on:
-      - postgres:
-          condition: service_healthy
+      postgres:
+        condition: service_healthy
     environment:
       LISTMONK_app__address: 0.0.0.0:9000
       LISTMONK_app__admin_username: admin
