--- a/tox.ini
+++ b/tox.ini
@@ -127,7 +127,7 @@ deps =
 #  constraints_file = "https://my-server.com/constraints.txt"
 ##
 commands =
-    pytest --disable-warnings -s {posargs} {toxinidir}/tests
+    pytest --disable-warnings {posargs} {toxinidir}/tests
 extras =
     test
 
