--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,8 +122,12 @@ Zope = [
 ]
 python-dateutil = ['dateutil']
 ignore-packages = ['zestreleaser.towncrier', 'zest.releaser', 'pytest', 'pytest-cov', 'pytest-plone']
-'Products.CMFPlone' = ['plone.app.contenttypes', 'plone.base', 'plone.dexterity', 'plone.registry', 'plone.supermodel', 'Products.GenericSetup']
+'Products.CMFPlone' = [
+  'plone.app.contenttypes', 'plone.app.uuid', 'plone.base', 'plone.dexterity',
+  'plone.registry', 'plone.supermodel', 'Products.GenericSetup'
+]
 'plone.app.testing' = ['plone.testing']
+'souper.plone' = ['souper', 'repoze.catalog']
 
 ##
 # Add extra configuration options in .meta.toml:
