--- a/.meta.toml
+++ b/.meta.toml
@@ -10,8 +10,9 @@ codespell_skip = "*.min.js"
 codespell_ignores = "vew"
 dependencies_ignores = "['zestreleaser.towncrier', 'zest.releaser', 'pytest', 'pytest-cov', 'pytest-plone']"
 dependencies_mappings = [
-    "'Products.CMFPlone' = ['plone.app.contenttypes', 'plone.base', 'plone.dexterity', 'plone.registry', 'plone.supermodel', 'Products.GenericSetup']",
-    "'plone.app.testing' = ['plone.testing'],
+    "'Products.CMFPlone' = ['plone.app.contenttypes', 'plone.app.uuid', 'plone.base', 'plone.dexterity', 'plone.registry', 'plone.supermodel', 'Products.GenericSetup']",
+    "'plone.app.testing' = ['plone.testing']",
+    "'souper.plone' = ['souper', 'repoze.catalog']",
     ]
 extra_lines = """
 [tool.coverage.run]
