--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,7 +124,7 @@ python-dateutil = ['dateutil']
 ignore-packages = ['zestreleaser.towncrier', 'zest.releaser', 'pytest', 'pytest-cov', 'pytest-plone']
 'Products.CMFPlone' = [
   'plone.app.contenttypes', 'plone.app.uuid', 'plone.base', 'plone.dexterity',
-  'plone.registry', 'plone.supermodel', 'Products.GenericSetup'
+  'plone.registry', 'plone.schema', 'plone.supermodel', 'Products.GenericSetup'
 ]
 'plone.app.testing' = ['plone.testing']
 'souper.plone' = ['souper', 'repoze.catalog']
